# ad-localization

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: config.py  jobs.py  main.py  schemas.py
app/services/: gcs.py  postprocess.py  processing.py  video_intel.py
app/tools/: render_marked_video.py
app/utils/: video_utils.py
cloudrun/: deploy.sh
src/ai_loca/: __init__.py  cli.py  config.py  dto.py  errors.py  ffmpeg_presets.py  http_client.py  logging.py
src/ai_loca/adapters/: __init__.py  mt_hf.py  openai_mt.py  openai_stt.py  openai_tts.py  stt_hf.py  tts_elevenlabs.py  tts_hf.py
src/ai_loca/audio/: bed.py  speaker_ref.py  stems.py
src/ai_loca/dub/: planner.py
src/ai_loca/pipeline/: orchestrator.py
src/ai_loca/pipeline/steps/: separate.py
src/ai_loca/subtitles/: processor.py
src/ai_loca/utils/: ffmpeg.py  retry.py  snapshot.py
